--- a/pages/product.html
+++ b/pages/product.html
@@ -26,12 +26,52 @@
     </div>
     <!--顶部 end-->
 
-    <div class="mod-full">
+    <div class="mod-full mod-blue">
         <div class="grid-m1210">
+            <div class="product-intro01">
+                <div class="intro">
+                    <h4 class="title">有了写货宝 销售提升不止50%</h4>
+                    <p>写货宝分为&nbsp; "供应商端"&nbsp; 和&nbsp; "商家端"&nbsp; 两个部分, 支持从写货, 下单、审核、拣货、发货、确认等！
+全部业务环节实现信息同步呈现, 写货效率大大提升</p>
+                </div>
+            </div>
         </div>
     </div>
     
-    
+    <div class="mod-full mod-gray-light">
+        <div class="grid-m1210">
+            <div class="product-intro02">
+                <div class="intro">
+                    <h4 class="title">升级传统渠道批发环节 让生意不再难做</h4>
+                    <p><span>促进互联网转型</span>建专属写货平台，告别传统电话、手写单等订货方式，让客户像网购  一样订货，支持电脑、手机APP操作。 </p>
+                    <p><span>商家数据闭环</span>商家审核机制，有效避免无效商家
+                    <p><span>提升业务效率</span>商家自主订货，商品图文并茂，价格库存实时同步，政策即时生效，无需咨询与讨价还价，繁琐操作用系统搞定。 </p>
+                    <p><span>增强商家管理</span>将商家进行系统化管理，建立直接沟通渠道。打破传统层层传话的管理方式，更加直接高效，客户更可控！ </p>
+                    <p><span>拓展渠道生意</span>独有的游客访问模式可让陌生客户了解您，丰富的促销手段让您更易打动他们。 </p>
+                    <p><span>辅助经营决策</span>订单、销量、…企业经营数据实时产生即时呈现，让您随时了解企业状况，制定针对性经营策略。 </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mod-full mod-blue-light">
+        <div class="grid-m1210">
+            <div class="product-intro03">
+                <div class="intro">
+                    <h4 class="title">不止是写货，写货宝更是一款强大的企业管理软件</h4>
+                    <p>解决传统写货漏单、数据无法存留问题！<br>强化销售订单协同效率、建立全渠道营销订货平台，提升商家订货效率！</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mod-full">
+        <div class="grid-m1210">
+            <div class="product-intro04">
+                <div class="intro">
+                    <h4 class="title">现在开通写货宝，分销订货管理就是这么简单</h4>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- 底部 -->
     <footer class="mod-full mod-black">
         <div class="grid-m1210">
