商家信息页面

--- a/pages/sellerInfo.html
+++ b/pages/sellerInfo.html
@@ -13,50 +13,51 @@
         <header class="grid-m1210">
             <a href="/" target="_blank" class="topbar-item topbar-logo">
                 <img src="../images/xiehuo-logo.png" alt="写货宝"></a>
-            <span>欢迎您来到写货宝供应商端~！</span>
         </header>
     </div>
     <!--顶部 end-->
 
     <div class="mod-full">
         <!--我的店铺-->
-        <div class="grid-m1210 ml300">
-            <h2 class="title">我的店铺 &gt; <span class="fn-16">添加店铺</span></h2>
-            <div class="my-shop cf add-shop">
-                <div class="fl imgs">
-                    <a href="" class="img">
-                        <div class="shop-img"><i class="iconfont">&#xe651;</i></div>
-                    </a>
-                    <a href="" class="touxiang color-blue">编辑头像</a>
-                    <a href="" class="img">
-                        <div class="shop-img"><i class="iconfont">&#xe618;</i></div>
-                    </a>
-                    <a href="" class="color-blue">查看大图</a>
-                    <a href="" class="color-gray">营业执照</a>
-                </div>
-                <div class="shop-main">
-                    <p class="shop-name"><label for="" class="label">店铺名：</label><input type="text" class="input" placeholder="请输入店铺名称"></p>
-                    <p><label for="" class="label">联系人：</label><input type="text" class="input" placeholder="请输入联系人姓名"></p>
-                    <p><label for="" class="label">联系电话：</label><input type="text" class="input" placeholder="请输入联系电话"></p>
-                    <p class="no-label"><input type="text" class="input" placeholder="请输入联系电话"></p>
-                    <p><label for="" class="label">联系地址：</label>
-                        <select class="select-arrow input select-list">
+        <div class="grid-m1210">
+            <div class="input-list">
+                <h2 class="title">商家信息完善 <span>添加您的店铺</span></h2>
+                <div class="my-shop cf add-shop">
+                    <div class="fl imgs">
+                        <a href="" class="img">
+                            <div class="shop-img"><i class="iconfont">&#xe651;</i></div>
+                        </a>
+                        <a href="" class="touxiang color-blue">编辑头像</a>
+                        <a href="" class="img">
+                            <div class="shop-img"><i class="iconfont">&#xe618;</i></div>
+                        </a>
+                        <a href="" class="color-blue">查看大图</a>
+                        <a href="" class="color-gray">营业执照</a>
+                    </div>
+                    <div class="shop-main">
+                        <p class="shop-name"><label for="" class="label">店铺名：</label><input type="text" class="input" placeholder="请输入店铺名称"></p>
+                        <p><label for="" class="label">联系人：</label><input type="text" class="input" placeholder="请输入联系人姓名"></p>
+                        <p><label for="" class="label">联系电话：</label><input type="text" class="input" placeholder="请输入联系电话"></p>
+                        <p class="no-label"><input type="text" class="input" placeholder="请输入联系电话"></p>
+                        <p><label for="" class="label">联系地址：</label>
+                            <select class="select-arrow input select-list">
                                 <option>请选择省市区</option>
                                 <option>副食</option>
                                 <option>副食</option>
                                 </select></p>
-                    <p class="no-label"><input type="text" class="input input-long" placeholder="请如实填写您详细地址 如街道门牌号等详细地址"> <a href="javascirpt:;" class="set-address">此地址为收货地址</a></p>
-                    <p><label for="" class="label">执照编号：</label><input type="text" class="input" placeholder="请输入营业执照编号"></p>
-                    <p><label for="" class="label">业务类型：</label>
-                        <select class="select-arrow input select-list">
+                        <p class="no-label"><input type="text" class="input input-long" placeholder="请如实填写您详细地址 如街道门牌号等详细地址"> <a href="javascirpt:;" class="set-address">此地址为收货地址</a></p>
+                        <p><label for="" class="label">执照编号：</label><input type="text" class="input" placeholder="请输入营业执照编号"></p>
+                        <p><label for="" class="label">业务类型：</label>
+                            <select class="select-arrow input select-list">
                                 <option>请选择业务类型</option>
                                 <option>副食</option>
                                 <option>副食</option>
                                 </select></p>
-                    <p><label for="" class="label">店铺介绍：</label><textarea class="textarea" placeholder=" 请间断介绍您店铺信息，此信息将展示在商家列表 "></textarea></p>
-                    <p class="txt-warn">请输入店铺名称</p>
-                    <button class="btn btn-save">保存</button>
+                        <p><label for="" class="label">店铺介绍：</label><textarea class="textarea" placeholder=" 请间断介绍您店铺信息，此信息将展示在商家列表 "></textarea></p>
+                        <p class="txt-warn">请输入店铺名称</p>
+                        <button class="btn btn-save">保存</button>
 
+                    </div>
                 </div>
             </div>
         </div>
