--- a/pages/product.html
+++ b/pages/product.html
@@ -68,6 +68,102 @@
             <div class="product-intro04">
                 <div class="intro">
                     <h4 class="title">现在开通写货宝，分销订货管理就是这么简单</h4>
+                    <div class="shop-intro-item">
+                        <div class="shop-head"><img src="../images/touxiang01.png"></div>
+                        <a href="javascript:;" class="round-rect">我是供应商</a>
+                        <p class="info">适用于副食、百货、五金等批销商</p>
+                    </div>
+                     <div class="shop-intro-item">
+                        <div class="shop-head"><img src="../images/touxiang02.png"></div>
+                        <a href="javascript:;" class="round-rect">我是零售商</a>
+                        <p class="info">适用于超市、便利店等零售商家</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mod-full">
+        <div class="grid-m1210">
+             <img src="../images/title01.png" class="title-img">
+             <ul class="function-list">
+                 <li class="color-item">
+                     <i class="iconfont icon-order">&#xe650;</i>
+                     <div class="info">
+                        <span>订单管理</span>
+                        <p>客户下单订货，状态一目了然，有效避免拖单，错单，漏单</p>
+                     </div>
+                </li>
+                <li>
+                     <i class="iconfont">&#xe653;</i>
+                     <div class="info">
+                        <span>商品管理</span>
+                        <p>新品上架、图文展示，商家快速查阅</p>
+                     </div>
+                </li>
+                <li>
+                     <i class="iconfont">&#xe652;</i>
+                     <div class="info">
+                        <span>促销管理</span>
+                        <p>满送、捆绑促销活动，管理方便，快速推动商家下单，无需电话通知</p>
+                     </div>
+                </li>
+                <li class="color-item">
+                     <i class="iconfont">&#xe651;</i>
+                     <div class="info">
+                        <span>客户管理</span>
+                        <p>不同的商家不同的价格体系</p>
+                     </div>
+                </li>
+                <li class="color-item">
+                     <i class="iconfont">&#xe675;</i>
+                     <div class="info">
+                        <span>业务报表</span>
+                        <p>客户订单、区域订单、商品订单数据实时呈现，有效协助营销决策</p>
+                     </div>
+                </li>
+                <li>
+                     <i class="iconfont">&#xe695;</i>
+                     <div class="info">
+                        <span>业务员管理</span>
+                        <p>业务员业绩实时掌控</p>
+                     </div>
+                </li>
+                <li>
+                     <i class="iconfont">&#xe63c;</i>
+                     <div class="info">
+                        <span>信息发布</span>
+                        <p>发布公司政策公告，发布促销广告，信息实时同步</p>
+                     </div>
+                </li>
+                <li class="color-item">
+                     <i class="iconfont">&#xe64b;</i>
+                     <div class="info">
+                        <span>手机端写货</span>
+                        <p>业务员可以通过手机APP远程下单，商家可以自主下单</p>
+                     </div>
+                </li>
+             </ul>
+        </div>
+    </div>
+
+     <div class="mod-full mod-price-bg">
+        <div class="grid-m1210">
+            <div class="product-intro05">
+                <div class="intro">
+                    <div class="shop-price-item">
+                        <span>体验价</span>
+                        <strong>0</strong>
+                        <span class="unit">元</span>
+                        <del class="price">￥188/月</del>
+                        <a href="javascript:;" class="round-rect color-bg">免费体验</a>
+                    </div>
+                     <div class="shop-price-item">
+                        <span>体验价</span>
+                        <strong>0</strong>
+                        <span class="unit">元</span>
+                        <del class="price">￥1980/年</del>
+                        <a href="javascript:;" class="round-rect">免费体验</a>
+                    </div>
                 </div>
             </div>
         </div>
