商家信息页面完成

--- a/pages/sellerInfo.html
+++ b/pages/sellerInfo.html
@@ -21,7 +21,7 @@
         <!--我的店铺-->
         <div class="grid-m1210">
             <div class="input-list">
-                <h2 class="title">商家信息完善 <span>添加您的店铺</span></h2>
+                <h2 class="title">商家信息完善&nbsp;&nbsp;&nbsp;<span>添加您的店铺</span></h2>
                 <div class="my-shop cf add-shop">
                     <div class="fl imgs">
                         <a href="" class="img">
@@ -29,14 +29,15 @@
                         </a>
                         <a href="" class="touxiang color-blue">编辑头像</a>
                         <a href="" class="img">
-                            <div class="shop-img"><i class="iconfont">&#xe618;</i></div>
+                            <img class="shop-img" src="http://fuss10.elemecdn.com/a/c8/1796ec76390e5fe5357a869fde250jpeg.jpeg?imageMogr2/thumbnail/190x190/format/webp/quality/85" alt="">
+                            <div class="upload-img"><i class="iconfont"></i><span>上传新图片</span></div>
                         </a>
                         <a href="" class="color-blue">查看大图</a>
                         <a href="" class="color-gray">营业执照</a>
                     </div>
                     <div class="shop-main">
-                        <p class="shop-name"><label for="" class="label">店铺名：</label><input type="text" class="input" placeholder="请输入店铺名称"></p>
-                        <p><label for="" class="label">联系人：</label><input type="text" class="input" placeholder="请输入联系人姓名"></p>
+                        <p class="shop-name"><label for="" class="label">店&nbsp;铺&nbsp;名：</label><input type="text" class="input" placeholder="请输入店铺名称"></p>
+                        <p><label for="" class="label">联&nbsp;系&nbsp;人：</label><input type="text" class="input" placeholder="请输入联系人姓名"></p>
                         <p><label for="" class="label">联系电话：</label><input type="text" class="input" placeholder="请输入联系电话"></p>
                         <p class="no-label"><input type="text" class="input" placeholder="请输入联系电话"></p>
                         <p><label for="" class="label">联系地址：</label>
