--- a/pages/product.html
+++ b/pages/product.html
@@ -25,7 +25,23 @@
         </header>
     </div>
     <!--顶部 end-->
-
+    <!--置顶 end-->
+    <div class="mod-full shop-topbar black-top fixed-top">
+        <header class="grid-m1210">
+            <a href="/" target="_blank" class="topbar-item topbar-logo mr">
+                <img src="../images/xiehuo-logo-yellow.png" alt="写货宝"></a>
+            <a href="/" target="_blank" class="topbar-item acitve">产品概述</a>
+            <a href="" target="_blank" class="topbar-item">产品功能</a>
+            <a href="" target="_blank" class="topbar-item">价格</a>
+            <a href="" target="_blank" class="topbar-item">产品下载</a>
+            <div class="topbar-right login-regist">
+                <!-- 登陆 -->
+                <a href="javascript:;"><span>登录</span></a><a href="javascript:;" class="logo-out">注册</a>
+                <!-- 登陆 end-->
+            </div>
+        </header>
+    </div>
+    <!--置顶 end-->
     <div class="mod-full mod-blue">
         <div class="grid-m1210">
             <div class="product-intro01">
@@ -159,8 +175,8 @@
                     </div>
                      <div class="shop-price-item">
                         <span>体验价</span>
-                        <strong>0</strong>
-                        <span class="unit">元</span>
+                        <strong class="color-yellow">0</strong>
+                        <span class="unit color-yellow">元</span>
                         <del class="price">￥1980/年</del>
                         <a href="javascript:;" class="round-rect">免费体验</a>
                     </div>
@@ -168,6 +184,36 @@
             </div>
         </div>
     </div>
+    <div class="mod-full">
+        <div class="grid-m1210 product-download">
+            <p>让写货玩弄于指尖</p>
+            <img src="../images/xiehuo-qr-b.png" alt="">
+            <p>扫一扫 下载写货宝app</p>
+        </div>
+    </div>
+
+    	<!-- 半透明弹窗 -->
+	<div class="cover login-or-regist hide">
+		<div class="layer-main">
+            <div class="intro cf">
+                <div class="shop-intro-item">
+                    <div class="shop-head"><img src="../images/touxiang01.png"></div>
+                    <span class="name">我是供应商</span>
+                    <p class="info">我要公司管理</p>
+                    <a href="javascript:;" class="btn-shop">供应商端</a>
+                </div>
+                <div class="shop-intro-item">
+                    <div class="shop-head"><img src="../images/touxiang02.png"></div>
+                    <span class="name">我是零售商</span>
+                    <p class="info">我要开店</p>
+                    <a href="javascript:;" class="btn-shop btn-yellow">商家端</a>
+                </div>
+            </div>
+            <p class="welcome">欢迎您使用，写货宝分为“供应商端”和“商家端”两个部分
+</p>
+		</div>
+	</div>
+	<!-- 半透明弹窗 end -->
     <!-- 底部 -->
     <footer class="mod-full mod-black">
         <div class="grid-m1210">
