update new footer

--- a/pages/sellerInfo.html
+++ b/pages/sellerInfo.html
@@ -36,7 +36,7 @@
                         <a href="" class="color-gray">营业执照</a>
                     </div>
                     <div class="shop-main">
-                        <p class="shop-name"><label for="" class="label">店&nbsp;铺&nbsp;名：</label><input type="text" class="input" placeholder="请输入店铺名称"></p>
+                        <p><label for="" class="label">店&nbsp;铺&nbsp;名：</label><input type="text" class="input" placeholder="请输入店铺名称"></p>
                         <p><label for="" class="label">联&nbsp;系&nbsp;人：</label><input type="text" class="input" placeholder="请输入联系人姓名"></p>
                         <p><label for="" class="label">联系电话：</label><input type="text" class="input" placeholder="请输入联系电话"></p>
                         <p class="no-label"><input type="text" class="input" placeholder="请输入联系电话"></p>
@@ -67,7 +67,7 @@
 
 
     <!-- 底部 -->
-    <footer class="mod-full mod-gray">
+    <footer class="mod-full mod-gray new-footer">
         <div class="grid-m1210">
             <div class="footer-main cf">
                 <div class="links fl">
@@ -80,17 +80,11 @@
                     <a href="" target="_blank">关于我们</a>
                 </div>
                 <div class="qrcode-lr fl">
-                    <img src="../images/qrcode-m.jpg" alt="商家app">
+                    <img src="../images/xiehuo-qr-b.png" class="qr-img" alt="商家app">
                     <div class="qrcode-info fr">
-                        <span>供应商APP</span>
-                        <p>扫一扫，掌上供货管理</p>
-                    </div>
-                </div>
-                <div class="qrcode-lr fr">
-                    <img src="../images/qrcode-m.jpg" alt="供应商app">
-                    <div class="qrcode-info fr">
-                        <span>商家APP</span>
-                        <p>扫一扫，写货更方便</p>
+                        <span>APP下载</span>
+                        <p>扫一扫，下载写货宝</p>
+                        <p>掌上写货更方便</p>
                     </div>
                 </div>
             </div>
