--- a/pages/sellerLogin.html
+++ b/pages/sellerLogin.html
@@ -20,7 +20,7 @@
 
     <div class="mod-full">
         <div class="grid-m1210 login-bg">
-             <!--登录-->
+            <!--登录-->
             <div class="login-main hide">
                 <div class="input-list">
                     <h2 class="title">用户登录</h2>
@@ -36,12 +36,32 @@
                 <p class="info">Hi , 老朋友，欢迎登陆写货宝。如在使用中遇到困难，请联系我们<br>还不是会员？<a href="" class="color-yellow">立即注册</a></p>
             </div>
             <!--登录 end-->
-             <!--找回密码-->
+            <!--选择店铺-->
+            <div class="select-shops">
+                <div class="input-list">
+                    <h2 class="title">选择店铺</h2>
+                    <a href="" class="shop-item">
+                        <img src="http://fuss10.elemecdn.com/a/c8/1796ec76390e5fe5357a869fde250jpeg.jpeg?imageMogr2/thumbnail/190x190/format/webp/quality/85"
+                            alt="">
+                        <span>天天超市</span>
+                    </a>
+                    <a href="" class="shop-item">
+                        <img src="http://fuss10.elemecdn.com/a/c8/1796ec76390e5fe5357a869fde250jpeg.jpeg?imageMogr2/thumbnail/190x190/format/webp/quality/85"
+                            alt="">
+                        <span>wewewewe</span>
+                    </a>
+                </div>
+            </div>
+            <!--选择店铺 end-->
+            <!--找回密码-->
             <div class="findpwd-main hide">
                 <div class="input-list">
                     <h2 class="title">找回密码</h2>
                     <p><label for="" class="label">手机号：</label><input type="text" class="input" placeholder="请输入你注册的11位手机号码"></p>
-                    <p><label for="" class="label">验证码：</label><input type="password" class="input validate-code" placeholder="请输入验证码"><span class="get-code">获取验证码</span></p>
+                    <p><label for="" class="label">验证码：</label><input type="password" class="input validate-code" placeholder="请输入验证码">
+                        <span
+                            class="get-code">获取验证码</span>
+                    </p>
                     <p class="txt-warn">手机号或密码错误请确认后输入</p>
                     <button class="btn-save">下一步</button>
                     <div class="bottom-info">
@@ -51,7 +71,7 @@
                 </div>
             </div>
             <!--找回密码 end-->
-             <!--修改密码-->
+            <!--修改密码-->
             <div class="editpwd-main hide">
                 <div class="input-list">
                     <h2 class="title"><span>找回密码&nbsp;  &gt; &nbsp; </span> 修改密码</h2>
@@ -63,13 +83,19 @@
             </div>
             <!--修改密码 end-->
             <!--注册-->
-            <div class="register-main">
+            <div class="register-main hide">
                 <div class="input-list">
                     <h2 class="title">欢迎注册写货宝</h2>
                     <p class="new-letter"><label for="" class="label">手机号：</label><input type="text" class="input" placeholder="请输入你注册的11位手机号码"></p>
-                    <p class="new-letter"><label for="" class="label">验证码：</label><input type="text" class="input validate-code" placeholder="请输入验证码"><span class="get-code">获取验证码</span></p>
+                    <p class="new-letter"><label for="" class="label">验证码：</label><input type="text" class="input validate-code" placeholder="请输入验证码">
+                        <span
+                            class="get-code">获取验证码</span>
+                    </p>
                     <p class="new-letter"><label for="" class="label">姓&nbsp;&nbsp;名：</label><input type="text" class="input" placeholder=""></p>
-                    <p class="new-letter pwd-by-icon"><label for="" class="label">密&nbsp;&nbsp;码：</label><input type="password" class="input" placeholder=""><i class="iconfont icon-eye-open"></i></p>
+                    <p class="new-letter pwd-by-icon"><label for="" class="label">密&nbsp;&nbsp;码：</label><input type="password" class="input" placeholder="">
+                        <i
+                            class="iconfont icon-eye-open"></i>
+                    </p>
                     <p><label for="" class="label">确定密码 ：</label><input type="password" class="input" placeholder=""></p>
                     <p class="txt-warn">验证码错误，请确认后输入</p>
                     <button class="btn-save">下一步</button>
@@ -82,8 +108,8 @@
             <!--注册 end-->
         </div>
     </div>
-    
-    
+
+
     <!-- 底部 -->
     <footer class="mod-full mod-gray">
         <div class="grid-m1210">
