--- a/pages/orderDetail.html
+++ b/pages/orderDetail.html
@@ -46,17 +46,21 @@
 						<li class="pro-state">
 							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
 						</li>
-						<li class="pro-state dot-item active">
+						<li class="pro-state active">
 							<i class="iconfont icon-daishenhe">&#xe67e;</i>待审核
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe680;</i>拣货中<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe67c;</i>已发货<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe67d;</i>完成<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
 					</ul>
 					<a href="javascript:;" class="rect-border-radius cancel-order">取消订单</a>
@@ -79,17 +83,21 @@
 						<li class="pro-state">
 							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe67e;</i>待审核
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item active">
+						<li class="pro-state active">
 							<i class="iconfont icon-daishenhe">&#xe680;</i>拣货中<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe67c;</i>已发货<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe67d;</i>完成<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
 					</ul>
 					<a href="javascript:;" class="rect-border-radius btn-shadow">订单加急</a>
@@ -111,17 +119,21 @@
 						<li class="pro-state">
 							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe67e;</i>待审核
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe680;</i>拣货中<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item active">
+						<li class="pro-state active">
 							<i class="iconfont icon-daishenhe">&#xe67c;</i>已发货<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe67d;</i>完成<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
 					</ul>
 					<a href="javascript:;" class="rect-border-radius cancel-order hide">取消订单</a>
@@ -144,17 +156,21 @@
 						<li class="pro-state">
 							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
 						</li>
-						<li class="pro-state dot-item active">
+						<li class="pro-state active">
 							<i class="iconfont icon-daishenhe">&#xe67e;</i>待审核
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe680;</i>拣货中<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe67c;</i>已发货<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
-						<li class="pro-state dot-item">
+						<li class="pro-state">
 							<i class="iconfont icon-daishenhe">&#xe67d;</i>完成<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
 					</ul>
 					<a href="javascript:;" class="rect-border-radius cancel-order hide">取消订单</a>
@@ -177,8 +193,9 @@
 						<li class="pro-state">
 							<i class="iconfont icon-xiehuo">&#xe64b;</i>订单已提交<span>2017-02-15 12:23:00</span>
 						</li>
-						<li class="pro-state dot-item active">
+						<li class="pro-state active">
 							<i class="iconfont icon-daishenhe">&#xe67f;</i>已取消<span>2017-02-15 12:23:00</span>
+							<span class="dot-item"></span>
 						</li>
 					</ul>
 					<a href="javascript:;" class="rect-border-radius cancel-order hide">取消订单</a>
