--- a/pages/product.html
+++ b/pages/product.html
@@ -13,10 +13,10 @@
         <header class="grid-m1210">
             <a href="/" target="_blank" class="topbar-item topbar-logo mr">
                 <img src="../images/xiehuo-logo.png" alt="写货宝"></a>
-            <a href="/" target="_blank" class="topbar-item">产品概述</a>
-            <a href="" target="_blank" class="topbar-item">产品功能</a>
-            <a href="" target="_blank" class="topbar-item">价格</a>
-            <a href="" target="_blank" class="topbar-item">产品下载</a>
+            <a href="/" class="topbar-item">产品概述</a>
+            <a href="" class="topbar-item">产品功能</a>
+            <a href="" class="topbar-item">价格</a>
+            <a href="" class="topbar-item">产品下载</a>
             <div class="topbar-right login-regist">
                 <!-- 登陆 -->
                 <a href="javascript:;"><span>登录</span></a><a href="javascript:;" class="logo-out">注册</a>
@@ -30,10 +30,10 @@
         <header class="grid-m1210">
             <a href="/" target="_blank" class="topbar-item topbar-logo mr">
                 <img src="../images/xiehuo-logo-yellow.png" alt="写货宝"></a>
-            <a href="/" target="_blank" class="topbar-item acitve">产品概述</a>
-            <a href="" target="_blank" class="topbar-item">产品功能</a>
-            <a href="" target="_blank" class="topbar-item">价格</a>
-            <a href="" target="_blank" class="topbar-item">产品下载</a>
+            <a href="#xiehuo-intro" class="topbar-item acitve">产品概述</a>
+            <a href="#xiehuo-function" class="topbar-item">产品功能</a>
+            <a href="#xiehuo-price" class="topbar-item">价格</a>
+            <a href="#xiehuo-download" class="topbar-item">产品下载</a>
             <div class="topbar-right login-regist">
                 <!-- 登陆 -->
                 <a href="javascript:;"><span>登录</span></a><a href="javascript:;" class="logo-out">注册</a>
@@ -42,7 +42,7 @@
         </header>
     </div>
     <!--置顶 end-->
-    <div class="mod-full mod-blue">
+    <div class="mod-full mod-blue" id="xiehuo-intro">
         <div class="grid-m1210">
             <div class="product-intro01">
                 <div class="intro">
@@ -98,7 +98,7 @@
             </div>
         </div>
     </div>
-    <div class="mod-full">
+    <div class="mod-full" id="xiehuo-function">
         <div class="grid-m1210">
              <img src="../images/title01.png" class="title-img">
              <ul class="function-list">
@@ -162,7 +162,7 @@
         </div>
     </div>
 
-     <div class="mod-full mod-price-bg">
+     <div class="mod-full mod-price-bg" id="xiehuo-price">
         <div class="grid-m1210">
             <div class="product-intro05">
                 <div class="intro">
@@ -184,7 +184,7 @@
             </div>
         </div>
     </div>
-    <div class="mod-full">
+    <div class="mod-full" id="xiehuo-download">
         <div class="grid-m1210 product-download">
             <p>让写货玩弄于指尖</p>
             <img src="../images/xiehuo-qr-b.png" alt="">
