--- a/pages/securityCenter.html
+++ b/pages/securityCenter.html
@@ -84,7 +84,7 @@
              <a href="javascript:;" class="close-cover"><i class="iconfont">&#xe656;</i></a>
             <h2 class="title">安全中心<span> &gt; 修改密码</span></h2>
             <div class="input-list">
-            <p><label for="" class="label">密&nbsp; &nbsp; &nbsp; &nbsp;码：</label><input type="password" class="input" placeholder="请输入密码"><i class="iconfont icon-eye-open"></i></p>
+            <p class="new-letter"><label for="" class="label">密&nbsp; 码：</label><input type="password" class="input" placeholder="请输入密码"><i class="iconfont icon-eye-open"></i></p>
             <p class="new-letter"><label for="" class="label">新密码：</label><input type="password" class="input" placeholder="请再次输入密码"><i class="iconfont icon-eye"></i></p>
             <p class="new-letter"><label for="" class="label">新密码：</label><input type="password" class="input" placeholder="请再次输入密码"><i class="iconfont icon-eye"></i></p>
             </div>
