--- a/pages/supplierLogin.html
+++ b/pages/supplierLogin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>登录注册-商家端</title>
-    <link rel="stylesheet" href="../css/supplierLogin.css">
+    <link rel="stylesheet" href="../css/login.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <!--顶部 end-->
 
     <div class="mod-full">
-        <div class="grid-m1210 login-bg">
+        <div class="grid-m1210 login-bg supplier-bg">
             <!--登录-->
             <div class="login-main">
                 <div class="input-list">
