--- a/pages/index.html
+++ b/pages/index.html
@@ -44,7 +44,7 @@
 				<span>添加供应商</span>
 				
 			</div>
-			<div class="qrcode-tb fr">
+			<!--<div class="qrcode-tb fr">
 				<span class="name">商家app</span>
 				<a href="javascript:;">
 					<img src="../images/supper-qr.jpg" alt="商家app" class="qrcode-img">
@@ -53,9 +53,9 @@
 					<span>扫一扫，手机写货更方便</span>
 					<img src="../images/qrcode-m.jpg" alt="商家app" class="qrcode-img-b">
 				</div>
-			</div>
+			</div>-->
 			<div class="qrcode-tb fr">
-				<span class="name">供应商app</span>
+				<span class="name">APP下载</span>
 				<a href="javascript:;">
 				<img src="../images/supper-qr.jpg" alt="供应商app" class="qrcode-img">
 				</a>
@@ -67,6 +67,7 @@
 		</div>
 		<nav class="grid-m1210">
 			<ul class="nav-list">
+				<!--切换选中状态  添加class="current"-->
 				<li><a href="" class="current">全部供应</a><span class="line"></span></li>
 				<li><a href="">副食</a><span class="line"></span></li>
 				<li><a href="">日化</a><span class="line"></span></li>
@@ -283,7 +284,7 @@
 			</ul>
 			</div>
 	</div>
-	<footer class="mod-full">
+	<!--<footer class="mod-full">
 		<div class="grid-m1210">
 			<div class="footer-main cf">
 				<div class="links fl">
@@ -314,8 +315,37 @@
 				© 2016—2017 XIEHUOBAO.COM　四川科技有限公司　京ICP备17009001号-1
 			</p>
 		</div>
-	</footer>
-	<div class="sidebar side-fixed hide">
+	</footer>-->
+	 <!-- 底部 -->
+    <footer class="mod-full new-footer">
+        <div class="grid-m1210">
+            <div class="footer-main cf">
+                <div class="links fl">
+                    <a href="" target="_blank" class="f-16">关于写货</a>
+                    <a href="" target="_blank" class="f-16">我是供应商</a>
+                    <a href="" target="_blank" class="f-16">我要开店</a>
+                    <a href="" target="_blank">公司介绍</a>
+                    <a href="" target="_blank">申请供应商</a>
+                    <a href="" target="_blank">申请商家</a>
+                    <a href="" target="_blank">关于我们</a>
+                </div>
+                <div class="qrcode-lr fl">
+                    <img src="../images/xiehuo-qr-b.png" class="qr-img" alt="商家app">
+                    <div class="qrcode-info fr">
+                        <span>APP下载</span>
+                        <p>扫一扫，下载写货宝</p>
+                        <p>掌上写货更方便</p>
+                    </div>
+                </div>
+            </div>
+            <p class="copyright">
+                © 2016—2017 XIEHUOBAO.COM　四川科技有限公司　京ICP备17009001号-1
+            </p>
+        </div>
+    </footer>
+    <!-- 底部 end -->
+
+	<div class="sidebar side-fixed">
 		<a href="" class="item current">
 			<i class="iconfont">&#xe67a;</i>
 			<span>添加供应</span>
