--- a/pages/product.html
+++ b/pages/product.html
@@ -9,7 +9,7 @@
 
 <body>
     <!--顶部-->
-    <div class="mod-full shop-topbar black-top">
+    <!--<div class="mod-full shop-topbar black-top">
         <header class="grid-m1210">
             <a href="/" target="_blank" class="topbar-item topbar-logo mr">
                 <img src="../images/xiehuo-logo.png" alt="写货宝"></a>
@@ -17,23 +17,23 @@
             <a href="" class="topbar-item">产品功能</a>
             <a href="" class="topbar-item">价格</a>
             <a href="" class="topbar-item">产品下载</a>
-            <div class="topbar-right login-regist">
+            <div class="topbar-right login-regist">-->
                 <!-- 登陆 -->
-                <a href="javascript:;"><span>登录</span></a><a href="javascript:;" class="logo-out">注册</a>
+                <!--<a href="javascript:;"><span>登录</span></a><a href="javascript:;" class="logo-out">注册</a>-->
                 <!-- 登陆 end-->
-            </div>
+            <!--</div>
         </header>
-    </div>
+    </div>-->
     <!--顶部 end-->
     <!--置顶 end-->
-    <div class="mod-full shop-topbar black-top fixed-top">
-        <header class="grid-m1210">
+    <div class="mod-full shop-topbar black-top fixed-top" id="j-fixedHeader">
+        <header class="grid-m1210 cf">
             <a href="/" target="_blank" class="topbar-item topbar-logo mr">
                 <img src="../images/xiehuo-logo-yellow.png" alt="写货宝"></a>
-            <a href="#xiehuo-intro" class="topbar-item acitve">产品概述</a>
-            <a href="#xiehuo-function" class="topbar-item">产品功能</a>
-            <a href="#xiehuo-price" class="topbar-item">价格</a>
-            <a href="#xiehuo-download" class="topbar-item">产品下载</a>
+            <a href="javascript:;" class="nav-item topbar-item active">产品概述</a>
+            <a href="javascript:;" class="nav-item topbar-item">产品功能</a>
+            <a href="javascript:;" class="nav-item topbar-item">价格</a>
+            <a href="javascript:;" class="nav-item topbar-item">产品下载</a>
             <div class="topbar-right login-regist">
                 <!-- 登陆 -->
                 <a href="javascript:;"><span>登录</span></a><a href="javascript:;" class="logo-out">注册</a>
@@ -42,7 +42,7 @@
         </header>
     </div>
     <!--置顶 end-->
-    <div class="mod-full mod-blue" id="xiehuo-intro">
+    <div class="mod-full mod-blue j-floor" id="xiehuo-intro">
         <div class="grid-m1210">
             <div class="product-intro01">
                 <div class="intro">
@@ -98,7 +98,7 @@
             </div>
         </div>
     </div>
-    <div class="mod-full" id="xiehuo-function">
+    <div class="mod-full j-floor" id="xiehuo-function">
         <div class="grid-m1210">
              <img src="../images/title01.png" class="title-img">
              <ul class="function-list">
@@ -162,7 +162,7 @@
         </div>
     </div>
 
-     <div class="mod-full mod-price-bg" id="xiehuo-price">
+     <div class="mod-full mod-price-bg j-floor" id="xiehuo-price">
         <div class="grid-m1210">
             <div class="product-intro05">
                 <div class="intro">
@@ -184,8 +184,9 @@
             </div>
         </div>
     </div>
-    <div class="mod-full" id="xiehuo-download">
+    <div class="mod-full j-floor" id="xiehuo-download">
         <div class="grid-m1210 product-download">
+            <img src="../images/titile-download.jpg" class="title">
             <p>让写货玩弄于指尖</p>
             <img src="../images/xiehuo-qr-b.png" alt="">
             <p>扫一扫 下载写货宝app</p>
@@ -235,7 +236,8 @@
     </footer>
 
     <!-- 底部 end -->
-
+    <script src="../js/jquery-3.2.1.min.js"></script>
+    <script src="../js/product.js"></script>
 </body>
 
 </html>
